apps/workloads/fitlogger-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fitlogger
  labels:
    app.kubernetes.io/part-of: fitlogger
